--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,10 @@ body {
 /* Toggle Styles */
 #wrapper {
   padding-left: 0;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 #wrapper.toggled {
@@ -24,10 +24,10 @@ body {
   margin-left: -250px;
   overflow-y: auto;
   background: #2e353b;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -45,6 +45,11 @@ body {
 }
 
 /* Sidebar Styles */
+.menu_title {
+  font-size: 11px;
+  padding-left: 5px;
+}
+
 .sidebar-nav {
   position: absolute;
   top: 0;
@@ -52,27 +57,18 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
-  font-weight: 700;
+  text-transform: uppercase;
   letter-spacing: 1px;
   color: #70767c;
-  font-size: 25px;
-  padding-left: 5px;
-}
-
-.text-style {
   font-size: 15px;
-}
-
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
 }
 
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
   color: #999999;
-  padding: 15px 15px;
+  padding: 10px 15px;
+  font-weight: 700;
 }
 
 .sidebar-nav li a:hover {
@@ -90,7 +86,6 @@ body {
 }
 
 .sidebar-nav > .sidebar-brand {
-  font-size: 11px;
   line-height: 60px;
 }
 
